[package]
name = "router-crabs"
version = "0.2.2"
edition = "2021"
description = "🧭 Multi-tier LLM router — automatically routes to the right model based on detected domain. Multi-provider (DeepSeek, OpenAI, Groq, Anthropic, OpenRouter, Mistral…). Usable as a standalone binary or as a Rust library."
license = "MIT"
repository = "https://github.com/NadLad/RouterCrabs"
documentation = "https://github.com/NadLad/RouterCrabs#readme"
readme = "README.md"
keywords = ["llm", "router", "proxy", "deepseek", "openai"]
categories = ["development-tools", "web-programming::http-server"]

[dependencies]
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tokio-stream = "0.1"